# simple

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  noxfile.py  pyproject.toml
docs/: conf.py  index.md  installation.md
docs/tutorials/: custom_models.ipynb  fit_line.ipynb  gaussian_processes.ipynb  getting-started.ipynb  types_of_model.ipynb
src/simple/: __init__.py  distributions.py  model.py  plot.py  utils.py
tests/: distributions_test.py  test_simple.py  utils_test.py
tutorials/: fit_line.py
