[project]
name = "simple"
authors = [
  { name="Thomas Vandal", email="thomas.vandal@umontreal.ca" },
]
description = "Simple probabilistic programming language"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT License" }
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
]
dynamic = ["version"]
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
]

[project.urls]
"Homepage" = "https://github.com/vandalt/simple"
"Repository" = "https://github.com/vandalt/simple"
"Bug Tracker" = "https://github.com/vandalt/simple/issues"

[project.optional-dependencies]
test = ["pytest", "numpyro"]
tutorials = ["corner", "arviz", "emcee", "dynesty"]
dev = ["pre-commit", "black", "ruff", "nox"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/simple/_version.py"

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
]
